--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ dash==2.15.0
 dash_bootstrap_components==1.5.0
 dash_loading_spinners==1.0.3
 diskcache==5.6.3
+gunicorn==21.2.0
 multiprocess==0.70.15
 numpy==1.26.3
 pillow==10.2.0
